inserindo mais tag p

--- a/arquivos2.html
+++ b/arquivos2.html
@@ -1,12 +1,12 @@
-<p>teste02</p>
-<p>teste02</p>
-<p>teste02</p>
-<p>teste02</p>
-<p>teste02</p>
-<p>teste02</p>
-<p>teste02</p>
-<p>teste02</p>
-<p>teste02</p>
-<p>teste02</p>
-<p>teste02</p>
-<p>teste02</p>
+<p>teste02</p><p>teste02</p>
+<p>teste02</p><p>teste02</p>
+<p>teste02</p><p>teste02</p>
+<p>teste02</p><p>teste02</p>
+<p>teste02</p><p>teste02</p>
+<p>teste02</p><p>teste02</p>
+<p>teste02</p><p>teste02</p>
+<p>teste02</p><p>teste02</p>
+<p>teste02</p><p>teste02</p>
+<p>teste02</p><p>teste02</p>
+<p>teste02</p><p>teste02</p>
+<p>teste02</p><p>teste02</p>
